kubernets/catalogue.yaml
---
#######################################################
# CATALOGUE DEPLOYMENT
#######################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  namespace: roboshop
spec:
  replicas: 1

  selector:
    matchLabels:
      app: catalogue

  template:
    metadata:
      labels:
        app: catalogue

    spec:
      containers:
      - name: catalogue

        image: devopman/catalogue:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 3

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

---
#######################################################
# CATALOGUE SERVICE
#######################################################
apiVersion: v1
kind: Service

metadata:
  name: catalogue
  namespace: roboshop

spec:
  selector:
    app: catalogue

  ports:
  - port: 8080
    targetPort: 8080
