kubernets/front.yaml
---
#######################################################
# FRONTEND DEPLOYMENT
#######################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: roboshop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: devopman/frontend:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 256Mi

---
#######################################################
# FRONTEND SERVICE
#######################################################
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: roboshop

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
