kubernets/roboshop.yaml
##############################################
# MYSQL
##############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: devopman/mysql:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: roboshop
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306

##############################################
# CATALOGUE
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: devopman/catalogue:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: roboshop
spec:
  selector:
    app: catalogue
  ports:
  - port: 8080
    targetPort: 8080

##############################################
# USER
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: devopman/user:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: roboshop
spec:
  selector:
    app: user
  ports:
  - port: 8080
    targetPort: 8080

##############################################
# CART
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: devopman/cart:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: roboshop
spec:
  selector:
    app: cart
  ports:
  - port: 8080
    targetPort: 8080

##############################################
# SHIPPING
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: devopman/shipping:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: roboshop
spec:
  selector:
    app: shipping
  ports:
  - port: 8080
    targetPort: 8080

##############################################
# PAYMENT
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: devopman/payment:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: roboshop
spec:
  selector:
    app: payment
  ports:
  - port: 8080
    targetPort: 8080

##############################################
# FRONTEND
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: devopman/frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: roboshop
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
