kubernets/user_cart.yaml
---
#######################################################
# USER DEPLOYMENT
#######################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: devopman/user:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

---
#######################################################
# USER SERVICE
#######################################################
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: roboshop
spec:
  selector:
    app: user
  ports:
  - port: 8080
    targetPort: 8080

---
#######################################################
# CART DEPLOYMENT
#######################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: roboshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: devopman/cart:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

---
#######################################################
# CART SERVICE
#######################################################
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: roboshop
spec:
  selector:
    app: cart
  ports:
  - port: 8080
    targetPort: 8080
