kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roboshop-ingress
  namespace: roboshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:

      # Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # Catalogue API
      - path: /api/catalogue
        pathType: Prefix
        backend:
          service:
            name: catalogue
            port:
              number: 8080

      # User API
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080

      # Cart API
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 8080

      # Shipping API
      - path: /api/shipping
        pathType: Prefix
        backend:
          service:
            name: shipping
            port:
              number: 8080

      # Payment API
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 8080
