kubernets/shipping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipping-ingress
  namespace: roboshop
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/shipping/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: shipping
            port:
              number: 8080
